Search input: move up, in order to remove top gray line

--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ li.gallerybox div.thumb /* https://commons.wikimedia.org/wiki/Category:Historica
 
 #searchform {
 	position: absolute;
-	top: 0;
+	top: -9px;
 	right: 0;
 }
 
