Hide block with info about copyright

--- a/main.css
+++ b/main.css
@@ -31,7 +31,8 @@ hr,
 .oo-ui-icon-reload, /* Because full block is clickable, and with Reload text */
 .mw-preview-loading-elements span:nth-child(2), /* Redundant text */
 #ct-popup, /* https://be.wikisource.org/wiki/Новая_зямля_(1923)/I when mouse hover on page number, to drop vertical scroll */
-.mw-newarticletext div[style*='background:#F8FFFF']:first-child /* Help text in Wiktionary edit screen */
+.mw-newarticletext div[style*='background:#F8FFFF']:first-child, /* Help text in Wiktionary edit screen */
+#editpage-copywarn2 /* "Калі ласка, не капіюйце тэксты з крыніц, якія ахоўваюцца аўтарскімі правамі (з кніг, сайтаў і іншых), бо такія матэрыялы будуць выдаленыя */
 {
     display: none !important;
 }
