Wikidata: languages: font size increase also for be_x_oldwiki

--- a/main.css
+++ b/main.css
@@ -287,6 +287,11 @@ div.vectorTabs ul li{
 	background: #131;
 }
 
+/* Wikidata: bottom block with links to articles, Wikibooks, Wikiquote... */
+.wikibase-sitelinkgrouplistview {
+	width: 100%
+}
+
 .wikibase-sitelinkview-enwiki,
 .wikibase-sitelinkview-bewiki,
 .wikibase-sitelinkview-ruwiki {
