--- a/main.css
+++ b/main.css
@@ -293,7 +293,7 @@ div.vectorTabs ul li{
 }
 
 .wikibase-sitelinkview-enwiki,
-.wikibase-sitelinkview-ruwiki
+.wikibase-sitelinkview-ruwiki,
 .wikibase-sitelinkview-bewiki,
 .wikibase-sitelinkview-be_x_oldwiki {
     font-size: 40px;
