--- a/main.css
+++ b/main.css
@@ -143,7 +143,8 @@ figure[typeof~="mw:File/Thumb"] > figcaption,
 .flaggedrevs-pending,
 .mw-parser-output .templatebox-usagesample, /* https://commons.wikimedia.org/wiki/Creator:Frank_Schulenburg */
 .mw-parser-output .templatebox-languagedependant, /* https://commons.wikimedia.org/wiki/Creator:Frank_Schulenburg */
-.sdms-quick-view__cta /* Commons search: button "More Detals" */
+.sdms-quick-view__cta, /* Commons search: button "More Detals" */
+.mwe-upwiz-file:hover .mwe-upwiz-visible-file /* Commons: step Upload: block hover of uploaded */
 {
 	background: #220 !important;
 }
