--- a/main.css
+++ b/main.css
@@ -159,7 +159,8 @@ tr,
 .oo-ui-fieldLayout-header, /* Label for commit message input */
 .mwe-upwiz-label-title a, /* "Do you know what Creative Commons license this work was published under?" */
 .cdx-tabs:not(.cdx-tabs--framed) > .cdx-tabs__header .cdx-tabs__list__item:enabled, /* Commons search: top bar buttons */
-.mainpage-box-content [style*='#000;'] /* Commons: main page: block with text like "Upload your local culture photos during Wiki Loves Folklore 2024" */
+.mainpage-box-content [style*='#000;'], /* Commons: main page: block with text like "Upload your local culture photos during Wiki Loves Folklore 2024" */
+#xtools_result
 {
 	color: #bbb !important;
 }
